--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "honeycomb-beeline": "^3.0.0"
   },
   "devDependencies": {
+    "@types/jest": "^27.0.3",
     "@types/shimmer": "^1.0.2",
     "eslint": "^8.3.0",
     "eslint-plugin-node": "^11.1.0",
