--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,6 +13,9 @@ executors:
     # https://support.circleci.com/hc/en-us/articles/360054908812-Speed-up-steps-using-a-RAM-disk
     working_directory: /mnt/ramdisk/project
 
+orbs:
+  codecov: codecov/codecov@3.1.1
+
 commands:
   install-deps:
     steps:
@@ -32,12 +35,18 @@ jobs:
     steps:
       - checkout
       - install-deps
-      - run: yarn test # TODO: junit & codecov
       - run:
-          command: yarn lint # TODO: junit
+          command: yarn --silent lint --format junit | tee test-reports/eslint.xml
           when: always
       - run:
-          command: yarn typecheck # TODO: junit
+          command: yarn --silent typecheck | yarn --silent run typescript-xunit-xml | tee test-reports/typescript.xml
           when: always
+      - run:
+          command: yarn test --coverage --testResultsProcessor jest-junit
+          environment:
+            JEST_JUNIT_OUTPUT_FILE: test-reports/jest.xml
+      - codecov/upload
+      - store_artifacts:
+          path: test-reports
       - store_test_results:
           path: test-reports
