--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "eslint-plugin-prettier": "^4.0.0",
     "honeycomb-beeline": "^3.1.0",
     "jest": "^27.4.3",
+    "jest-junit": "^13.0.0",
     "prettier": "^2.5.0",
     "selfsigned": "^1.10.11",
-    "typescript": "^4.5.2"
+    "typescript": "^4.5.2",
+    "typescript-xunit-xml": "^1.0.0"
   },
   "dependencies": {
     "shimmer": "^1.2.1"
