--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "honeycomb-beeline": "^3.1.0"
   },
   "devDependencies": {
+    "@types/body": "^5.1.1",
     "@types/jest": "^27.0.3",
     "@types/shimmer": "^1.0.2",
+    "body": "^5.1.0",
     "eslint": "^8.3.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^4.0.0",
