--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,11 +21,11 @@ commands:
     steps:
       - restore_cache:
           keys:
-            - v1-yarn-deps-{{ checksum "yarn.lock" }}
-            - v1-yarn-deps
+            - v1-npm-deps-{{ checksum "package-lock.json" }}
+            - v1-npm-deps
       - run: yarn install --frozen-lockfile
       - save_cache:
-          key: v1-yarn-deps-{{ checksum "yarn.lock" }}
+          key: v1-npm-deps-{{ checksum "package-lock.json" }}
           paths:
             - node_modules
 
@@ -36,13 +36,13 @@ jobs:
       - checkout
       - install-deps
       - run:
-          command: yarn --silent lint --format junit | tee test-reports/eslint.xml
+          command: npm run lint-ci
           when: always
       - run:
-          command: yarn --silent typecheck | yarn --silent run typescript-xunit-xml | tee test-reports/typescript.xml
+          command: npm run typecheck
           when: always
       - run:
-          command: yarn test --coverage --testResultsProcessor jest-junit
+          command: npm run test-ci
           when: always
           environment:
             JEST_JUNIT_OUTPUT_FILE: test-reports/jest.xml
