--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ workflows:
 executors:
   node:
     docker:
-      - image: circleci/node:12.22.1
+      - image: cimg/node:20.11
     # Everything is faster in RAM!
     # https://support.circleci.com/hc/en-us/articles/360054908812-Speed-up-steps-using-a-RAM-disk
     working_directory: /mnt/ramdisk/project
