--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,7 +23,7 @@ commands:
           keys:
             - v1-npm-deps-{{ checksum "package-lock.json" }}
             - v1-npm-deps
-      - run: yarn install --frozen-lockfile
+      - run: npm ci install --no-audit
       - save_cache:
           key: v1-npm-deps-{{ checksum "package-lock.json" }}
           paths:
